Fix spacing in code

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ header {
 }
 
 header h1 {
-  font-family: Sigmar One, sans-serif;
+  font-family: "Sigmar One", sans-serif;
   color: #b20953;
   font-size: 3rem;
   margin: 0;
@@ -66,7 +66,7 @@ a:hover {
   padding: .75em;
 }
 .berries, .blue, .grape, .red {
-  font-family: Sigmar One, sans-serif;
+  font-family: "Sigmar One", sans-serif;
   text-align: left;
   color: #b20953;
   font-size: 1.875rem;
@@ -97,7 +97,7 @@ footer {
   padding: .2em .5em .3em;
 }
 
-footer p{
+footer p {
   text-align: center;
   font-size: .75rem;
   padding: .75em;
